Tried to implement p-move js functions but parallax behaved choppy. Tried to fix a section via js but it was easier to use css sticky position for the same purpose. Fix functions are commented out. Tried to implement pure css parallax but created an inner scrolling section that looked weird. Between tests applied a throttle to the scroll to prevent lags and jumping.

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,6 @@ body {
 section {
   width: 100vw;
   margin-bottom: -1px;
-  padding-top: 10vh;
   position: relative;
   overflow-x: hidden;
 }
@@ -106,6 +105,7 @@ a {
     var(--color-sky-01) 50%,
     var(--color-sky-02) 100%
     );
+  overflow-x: hidden;
 }
 
 @keyframes move-background {
@@ -174,7 +174,7 @@ a {
 .welcome__title {
   position: relative;
   margin: 0 auto;
-  margin-top: 25vh;
+  margin-top: 35vh;
   z-index: 3;
   width: 50%;
   height: 8%;
@@ -195,20 +195,22 @@ a {
 
 .welcome__title-parts {
   position: relative;
+  transition: transform 100ms linear;
 }
 
 /* ABOUT SECTION */
 
 .about {
+  position: relative;
+  width: 100%;
   height: auto;
-  min-height: 100vh;
   background: linear-gradient(
     to bottom,
     var(--color-sky-02) 0%,
     var(--color-sky-03) 100%
     );
-  position: relative;
-  text-align: center;
+  padding-top: 15vh;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -219,7 +221,7 @@ a {
   position: relative;
   font-size: 7rem;
   max-width: 50%;
-  margin: 5rem;
+  margin-bottom: 5rem;
 }
 
 
@@ -274,6 +276,7 @@ a {
   padding: 10%;
   z-index: 1;
   position: relative;
+  object-fit: contain;
 }
 
 .about__project-description {
@@ -777,7 +780,6 @@ a {
 /* PARALLAX PROPERTIES*/
 
 .p--move {
-  transition: transform 100ms linear;
 }
 
 .p--move--container {
